Replace legacy command system with Brigadier